--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta property="og:title" content="Подберём любой внедорожник в кратчайшие сроки">
 	<meta property="og:image" content="img/1.jpg">
 	<meta property="og:description" content="Подберём любой внедорожник в кратчайшие сроки">
-	<link rel="stylesheet" href="css/style.min.css?_v=20230504233152">
+	<link rel="stylesheet" href="css/style.min.css">
 	<title>Cool Slider</title>
 </head>
 
@@ -231,7 +231,7 @@
 	</header>
 
 	
-	<script src="js/app.min.js?_v=20230504233152"></script>
+	<script src="js/app.min.js"></script>
 	<div class="modal micromodal-slide" id="modal-1" aria-hidden="true">
 	<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 		<div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
